k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okta-oidc
spec:
  ports:
    - port: 10003
  type: LoadBalancer
  selector:
    name: okta-oidc
