k8s/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  labels:
    app: nginx
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http-80
        protocol: HTTP
        # - port:
        #     number: 443
        #     name: https-443
        #     protocol: HTTPS
      hosts:
        - "*"
        # tls:
        #   mode: SIMPLE
        #   serverCertificate: /etc/istio/ingressgateway-certs/tls.crt # pre-req: generate a k8s secret containing these cert files
        #   privateKey: /etc/istio/ingressgateway-certs/tls.key

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
  labels:
    app: nginx
spec:
  hosts:
    - "*"
  gateways:
    - nginx-gateway
  http:
    - route:
        - destination:
            host: nginx
            port:
              number: 80
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: nginx-dest-rule
# spec:
#   host: nginx.default.svc.cluster.local
#   trafficPolicy:
#     loadBalancer:
#       consistentHash:
#         httpCookie:
#           name: nginx-session-affinity-cookie
#           ttl: 0s
